--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>Movie : ABCD</header>
+	<nav>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
+	</nav>
+	<summary>Brief summary of the movie.</summary>
+	<section id="actor">
+		<h1>Actors</h1>
+			<p> dehjviuldfnjvndfmv gfdgtr</p>
+	</section>
+	<section id="quote">
+		<h1>Favourite quote</h1>
+		<p>rfgvrtlgm,tr</p>
+	</section>
+	<aside>
+		<h1>Information about IMBD rating and release date</h1>
+		<p><strong>IMDB rating</strong> 4.6</p>
+		<p><strong>Release Date</strong> 23-09-2025</p>
+	</aside>
+	<footer>
+		<p>Produced by: Hema Lakshmi</p>
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
